[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/game/mouseLeft.png" type="Texture" id=1]
[ext_resource path="res://assets/game/pointer.png" type="Texture" id=2]
[ext_resource path="res://assets/game/deviceTilt.png" type="Texture" id=3]
[ext_resource path="res://assets/game/buttonA.png" type="Texture" id=4]
[ext_resource path="res://resources/text_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/game/vignette.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/NerkoOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://source/main.gd" type="Script" id=8]
[ext_resource path="res://source/server.gd" type="Script" id=9]
[ext_resource path="res://source/GameScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/game/white.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/SourceCodePro-Medium.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://source/client.gd" type="Script" id=13]
[ext_resource path="res://source/Pointer.tscn" type="PackedScene" id=14]
[ext_resource path="res://source/pointer.gd" type="Script" id=15]
[ext_resource path="res://source/Splash.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/audio/music__A Good Bass for Gambling.ogg" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 180
use_filter = true
extra_spacing_top = -6
extra_spacing_bottom = -19
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 44
outline_size = 4
outline_color = Color( 0.121569, 0.121569, 0.160784, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 7
font_data = ExtResource( 12 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform sampler2D vignette;

void fragment() {
	vec3 vignette_color = texture(vignette, UV).rgb;
	// Screen texture stores gaussian blurred copies on mipmaps
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, (1.0 - vignette_color.r) * 4.0).rgb;
	COLOR.rgb *= texture(vignette, UV).rgb;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/vignette = ExtResource( 6 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="client" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="client"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
color = Color( 0.121569, 0.121569, 0.160784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Control" parent="client"]
anchor_left = 0.5
anchor_right = 0.5

[node name="timer" type="Timer" parent="client/top"]
wait_time = 7.0
one_shot = true

[node name="status" type="Label" parent="client/top"]
margin_left = -200.0
margin_right = 200.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "connecting to server..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screens" type="Control" parent="client"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="client/screens"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Control" parent="client/screens/menu"]
anchor_right = 1.0
anchor_bottom = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="client/screens/menu/top"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "POP!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="middle" type="Control" parent="client/screens/menu"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointer" parent="client/screens/menu/middle" instance=ExtResource( 14 )]
script = ExtResource( 15 )
countdown_length = 3.0
option_null = NodePath("../dummy")
option_1 = NodePath("../easy")
option_2 = NodePath("../hard")

[node name="dummy" type="Label" parent="client/screens/menu/middle"]
margin_left = -150.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="easy" type="Label" parent="client/screens/menu/middle"]
margin_left = -150.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "EASY"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hard" type="Label" parent="client/screens/menu/middle"]
margin_left = -150.0
margin_top = 200.0
margin_right = 100.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "HARD"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="online_easy" type="Label" parent="client/screens/menu/middle"]
visible = false
margin_left = -150.0
margin_top = 300.0
margin_right = 100.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )
text = "MEDIUM?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="online_hard" type="Label" parent="client/screens/menu/middle"]
visible = false
margin_left = -150.0
margin_top = 400.0
margin_right = 100.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 2 )
text = "EXTREME?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TODO_highscores" type="Node2D" parent="client/screens/menu/middle"]

[node name="bottom" type="Control" parent="client/screens/menu"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="Control" parent="client/screens/menu/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Label" parent="client/screens/menu/bottom/center"]
margin_left = -300.0
margin_top = 25.0
margin_right = 300.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "SporkTank entry for 1-Button Jam 2020!
Only one button is needed to play this game."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls1" type="Sprite" parent="client/screens/menu/bottom/center"]
modulate = Color( 0.917647, 0.941176, 0.847059, 1 )
position = Vector2( -150, -25 )
texture = ExtResource( 3 )

[node name="controls2" type="Sprite" parent="client/screens/menu/bottom/center"]
modulate = Color( 0.917647, 0.941176, 0.847059, 1 )
position = Vector2( -50, -25 )
texture = ExtResource( 2 )

[node name="controls3" type="Sprite" parent="client/screens/menu/bottom/center"]
modulate = Color( 0.917647, 0.941176, 0.847059, 1 )
position = Vector2( 50, -25 )
texture = ExtResource( 1 )

[node name="controls4" type="Sprite" parent="client/screens/menu/bottom/center"]
modulate = Color( 0.917647, 0.941176, 0.847059, 1 )
position = Vector2( 150, -25 )
texture = ExtResource( 4 )

[node name="controls" type="Label" parent="client/screens/menu/bottom/center"]
margin_left = -300.0
margin_top = -75.0
margin_right = 300.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0.941176, 0.847059, 1 )
text = "TAP or HOLD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" parent="client/screens" instance=ExtResource( 10 )]
visible = false

[node name="vignette" type="TextureRect" parent="client"]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="client"]
stream = ExtResource( 17 )

[node name="reconnect_timer" type="Timer" parent="client"]
wait_time = 15.0
one_shot = true

[node name="splash" parent="." instance=ExtResource( 16 )]
visible = false
[connection signal="timeout" from="client/top/timer" to="client" method="_on_timer_timeout"]
[connection signal="option_selected" from="client/screens/menu/middle/pointer" to="client" method="_on_menu_pointer_option_selected"]
[connection signal="timeout" from="client/reconnect_timer" to="client" method="_on_reconnect_timer_timeout"]

[editable path="client/screens/game"]
